# omni-the-real-jarvis

./: .editorconfig  .env.example  .gitignore  404.html  LICENSE  README.md  architecture.txt  benchmark_mocked.py  benchmark_mocked_async.py  benchmark_mocked_updated.py  benchmark_scheduler.py  commit_msg.txt  firebase.json  firestore.indexes.json  fix_all.py  fix_desktop_tools.py  fix_desktop_tools_tests.py  fix_desktop_tools_tests2.py  fix_desktop_tools_tests3.py  fix_docstrings.py  fix_docstrings2.py  fix_docstrings3.py  future.features.txt  future.optimization.txt  index.html  mermaidDG.txt  mkdocs.yml  patch_all.py  patch_scheduler.py  patch_tests.py  requirements.txt  run.md  sitemap.xml  update.py  update_plugins.py
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  README.md  benchmark_scheduler.py  benchmark_scheduler_async.py  cloud-run-env-example.yaml  dev.py  pyproject.toml  ruff.toml  run_tests.py  test-output.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  agent_factory.py  cross_client_agent.py  multimodal_agent_tool.py  personas.py  root_agent.py  task_architect.py  task_planner_tool.py
backend/app/api/: auth.py  billing.py  clients.py  gallery.py  health.py  init.py  mcp.py  personas.py  plugins.py  router.py  scheduled_tasks.py  scheduler.py  sessions.py  tasks.py  ws_events.py  ws_live.py
backend/app/mcps/: README.md  TEMPLATE.json  arxiv.json  brave-search.json  canva.json  cloud-sql.json  context7.json  e2b-sandbox.json  filesystem.json.disabled  financial-datasets.json  github.json  (+16 more)
backend/scripts/: get_test_token.py  local_mcp_server.py  test_all_features.py  test_all_mcps.py  test_brave_mcp.py  test_courier_api.py  test_cross_client.py  test_desktop_client.py  test_desktop_file_app.py  test_desktop_tasks.py  test_e2b_desktop.py  test_e2b_full.py  test_e2b_streaming.py  test_e2e_deployed.py  test_github_mcp.py  test_image_gen.py  test_jules_mcp.py  test_live_connection.py  test_local_cron.py  test_models.py  test_oauth_plugin_fixes.py  test_pipeline.py  test_plugins.py  test_session_continuity.py  test_specific_model.py  test_task_architect.py  test_task_e2e.py  test_task_system.py  test_ws_live.py
backend/test_output/: token.txt
backend/tests/: conftest.py  test_cors.py
desktop-client/: build.bat  entry.py  omni_desktop.spec  pyproject.toml
desktop-client/src/: actions.py  audio.py  config.py  files.py  firebase_auth.py  gui.py  login_dialog.py  main.py  plugin_registry.py  screen.py  ws_client.py
desktop-client/tests/: __init__.py  conftest.py  test_actions.py  test_plugin_registry.py
(+353 files in other folders)
