[project]
name = "omni-desktop-client"
version = "0.1.0"
description = "Omni desktop agent — screen capture, mouse/keyboard control, file access"
requires-python = ">=3.12"
dependencies = [
    "websockets>=14.0",
    "pillow>=11.0",
    "pyautogui>=0.9.54",
    "mss>=9.0",
    "pynput>=1.7",
    "sounddevice>=0.5",
    "numpy>=2.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "rich>=13.9",
    "typer>=0.15",
    "PyQt6>=6.0.0",
    "qasync>=0.27.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25", "ruff>=0.9"]

[project.scripts]
omni-desktop = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
